overlay/development/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/v1beta1.FrontendConfig: "config-default"
spec:
  tls:
    - hosts:
        - "*.dev.dmoiseenko.me"
      secretName: any-dev-dmoiseenko-me-cert
    - hosts:
        - "*.system.dev.dmoiseenko.me"
      secretName: any-system-dev-dmoiseenko-me-cert
    - hosts:
        - "*.istio.dev.dmoiseenko.me"
      secretName: any-istio-dev-dmoiseenko-me-cert
    - hosts:
        - "*.hasura.dev.dmoiseenko.me"
      secretName: any-hasura-dev-dmoiseenko-me-cert
  rules:
    - host: "*.dev.dmoiseenko.me"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
    - host: "*.system.dev.dmoiseenko.me"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway-iap
              servicePort: 80
    - host: "*.istio.dev.dmoiseenko.me"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway-iap
              servicePort: 80
    - host: "*.hasura.dev.dmoiseenko.me"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway-iap
              servicePort: 80
